deploy/auth/keycloak-ingress.yaml
# WARN: This is for development purposes only. Do not use in production.
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keycloak
spec:
  tls:
    - hosts:
        - KEYCLOAK_HOST
  rules:
    - host: KEYCLOAK_HOST
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: keycloak
                port:
                  number: 8080
